--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <section class="section summary-section">
                 <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
                 <div class="summary">
-                    <p>I am a sincere and hard working student. I like reading Books and playing Basket Ball .<br> I am a sprinter and a cheerful person. I love and am proud of my unique characteristics</p>
+                    <p>I am a sincere and hard working student. I like reading Books and playing Basket Ball .<br> I am a sprinter and a cheerful person.</p>
                 </div><!--//summary-->
             </section><!--//section-->
             
