--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <p>
                         I am a sincere and hard working student. I am good at coding and like to participate in competitive programming.</p>
                     <p>
-                        My dream company is what understands the difference between human and machine.Ask me to automate the repetitive task, that's what machines are for! ☺ ☺  
+                        My dream company is what understands the difference between human and machine.Ask me to automate the repetitive task, that's what machines are for! 😁 
                         <br>
                         That job interest me more, which utilizes my intelligence and processing ,instead of asking me to store lots of data in my brain.I have hard drives for storing data.😜  </p>
                     <p>
