--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <ul class="list-unstyled contact-list">
                     <li class="email"><i class="fa fa-envelope"></i><a href="mailto:annupradhan26@gmail.com">annupradhan26@gmail.com</a></li>
                     <li class="phone"><i class="fa fa-phone"></i><a href="tel:9654408022">9654408022</a></li>
-                    <li class="linkedin"><i class="fa fa-linkedin"></i><a href="www.linkedin.com/in/annupradhan" target="_blank">linkedin.com/in/annupradhan</a></li>
+                    <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/in/annupradhan/" target="_blank">linkedin.com/in/annupradhan</a></li>
                     <li class="github"><i class="fa fa-github"></i><a href="https://github.com/annupradhan26" target="_blank">github.com/annupradhan26</a></li>
                 </ul>
             </div><!--//contact-container-->
