--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                     <h4 class="degree">B.Tech<br>Information Technology</h4>
                     <h5 class="meta">GGSIPU</h5>
                     <div class="time">2014 - 2018</div>
+                    <div class="meta">Aggregate: 79.6667%</div>
                 </div><!--//item-->
                 <div class="item">
                     <h4 class="degree">Senior Secondary(XII)</h4>
