--- a/index.html
+++ b/index.html
@@ -47,18 +47,19 @@
                     <h4 class="degree">B.Tech<br>Information Technology</h4>
                     <h5 class="meta">GGSIPU</h5>
                     <div class="time">2014 - 2018</div>
-                    <div class="meta">Aggregate: 79.6667%</div>
+                    <div class="meta">Aggregate: 79.67%</div>
                 </div><!--//item-->
                 <div class="item">
                     <h4 class="degree">Senior Secondary(XII)</h4>
                     <h5 class="meta">Kendriya Vidyalaya</h5>
                     <div class="time">2013 - 2014</div>
+                     <div class="meta">Aggregate: 85%</div>
                 </div><!--//item-->
-                <div class="item">
+<!--                 <div class="item">
                     <h4 class="degree">Secondary(X)</h4>
                     <h5 class="meta">Kendriya Vidyalaya</h5>
                     <div class="time">2011 - 2012</div>
-                </div><!--//item-->
+                </div>  //item-->
             </div><!--//education-container-->
 
             <div class="languages-container container-block">
