--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
             <div class="interests-container container-block">
                 <h2 class="container-block-title">Interests</h2>
                 <ul class="list-unstyled interests-list">
-                    <li>Software & Web Development</li>
-                    <li>Mobile App Development</li>
+                    <li>Software Development</li>
+                    
                     <li>Competitive Programming</li>
                     <li>Fun Adventure</li>
                 </ul>
@@ -107,6 +107,7 @@
                 <h2 class="container-block-title">Achievements</h2>
                 <ul class="list-unstyled interests-list">
                     <li>Won Gold medal in Inter-College Basketball tournament</li>
+                    <li>Finalist of Economic Times Campus stars 2018</li>
                     
                 </ul>
             </div><!--//interests-->
