--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                     <h4 class="degree">M.tech<br>Artificial Intelligence</h4>
                     <h5 class="meta">IGDTUW</h5>
                     <div class="time">2020-2022</div>
+                    <div class="meta">CGPA:7.9(Semester1)</div>
                 
                 </div>
                 <div class="item">
@@ -176,6 +177,18 @@
                 <div class="intro">
                     <!-- <p>You can list your side projects or open source libraries in this section. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus.</p> -->
                 </div><!--//intro-->
+                <div class="item">
+                    <span class="project-title"><b>Face Recognizer</b></span> - 
+                    <span class="project-tagline">An application for Face Detection and Face Recognition on real time scenario. The python script launches the device web cam to detect and recognize different faces present in the frame Technology Stack: Python, OpenCV
+                    <br>
+                    </span>
+                <div class="item">
+                    <span class="project-title"><b>Movie Recommendation System</b></span> - 
+                    <span class="project-tagline">A movie recommendation system based on collaborative filtering to recommend top 10 movies based on user choice is displayed.
+                    <br>
+                </span>
+                    
+                </div><!--//item-->
                 <div class="item">
                     <span class="project-title"><b>ParkAssist</b></span> - 
                     <span class="project-tagline">A mobile application for providing the list of parking spaces according to user current location or entered location. The application gives the list of parking spaces under the radius of 1 km of the location. Booking of a slot in a particular parking space can be done at real time<br>
