--- a/index.html
+++ b/index.html
@@ -148,10 +148,9 @@
                         <div class="company">Wipro Technologies</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Worked on Source One product line, to reduce the task of Technical Support Engineer (TSE)</p>
-                        <p>Created a web portal where the TSE can directly send a message to their respective client on outlook, with just one click, all the necessary information like to,cc,bcc, and message content would be automatically copied to outlook</p>
-                        <p>Created a customer satisfaction dashboard where the necessary information about a particular service request will be displayed to TSE.</p>
-                        <p>Technology used: Bootstrap, Microsoft Sql Server,Flask,Python</p>
+                      <p> Created a web portal to automate the task of Technical Support Engineer, providing a single repository of troubleshooting documents required for Support Engineers while solving issues faced by DELL-EMC clients.
+Simplified the overhead of sending messages to clients by providing the functionality of necessary details like to, cc, bcc and message content would be automatically copied to outlook
+Technology used: Bootstrap, Microsoft Sql Server, Flask, Python</p>
                     </div><!--//details-->
                 </div><!--//item-->
                 
