--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->  
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->  
@@ -173,7 +172,8 @@
                 </div><!--//intro-->
                 <div class="item">
                     <span class="project-title"><b>Face Recognizer</b></span> - 
-                    <span class="project-tagline">An application for Face Detection and Face Recognition on real time scenario. The python script launches the device web cam to detect and recognize different faces present in the frame Technology Stack: Python, OpenCV
+                    <span class="project-tagline">An application for Face Detection and Face Recognition on real time scenario. The python script launches the device web cam to detect and recognize different faces present in the frame 
+                    <br>Technology Stack: Python, OpenCV
                     
                     </span>
                 <br>
@@ -182,7 +182,7 @@
                     <span class="project-tagline">A movie recommendation system based on collaborative filtering to recommend top 10 movies based on user choice is displayed.
                     <br>
                 </span>
-                    
+                  <br>  
                 </div><!--//item-->
                 <div class="item">
                     <span class="project-title"><b>ParkAssist</b></span> - 
