--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
                 <div class="item">
                     <span class="project-title"><b>Face Recognizer</b></span> - 
                     <span class="project-tagline">An application for Face Detection and Face Recognition on real time scenario. The python script launches the device web cam to detect and recognize different faces present in the frame 
+                   
                     <br>Technology Stack: Python, OpenCV
                     
                     </span>
@@ -180,7 +181,7 @@
                 <div class="item">
                     <span class="project-title"><b>Movie Recommendation System</b></span> - 
                     <span class="project-tagline">A movie recommendation system based on collaborative filtering to recommend top 10 movies based on user choice is displayed.
-                    <br>
+                    <br>Technology Stack: Python, OpenCV
                 </span>
                   <br>  
                 </div><!--//item-->
